<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_recent"
            android:checked="true"
            android:icon="@drawable/ic_drawer_recent"
            android:title="@string/drawer_recent" />

        <item
            android:id="@+id/drawer_favorite"
            android:icon="@drawable/ic_drawer_favorite"
            android:title="@string/drawer_favorite" />

    </group>



            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/drawer_rate"
                    android:icon="@drawable/ic_drawer_rate"
                    android:title="@string/drawer_rate" />
                <item
                    android:id="@+id/drawer_radio_add"
                    android:icon="@drawable/ic_add_circle_black"
                    android:title="@string/drawer_radio_add"

                    />


                <item
                    android:id="@+id/drawer_sleep_mode"
                    android:icon="@drawable/ic_alarm_black"
                    android:title="@string/drawer_sleep_mode"

                    />

                <item
                    android:id="@+id/drawer_about"
                    android:icon="@drawable/ic_drawer_about"
                    android:title="@string/drawer_about" />
                <item
                    android:id="@+id/drawer_exit"
                    android:icon="@drawable/exit"
                    android:title="@string/drawer_exit" />

            </group>



</menu>