<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:layout_gravity="center"
   >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" >

        </include>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/sleep_mode_text"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textColorHighlight="?attr/colorAccent"
            android:shadowColor="@color/textColorBlack"
            android:textSize="14sp" />
        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numbersTextColor="@color/colorPrimary"
            android:numbersSelectorColor="@color/textColorGrey"
            android:headerBackground="@color/colorPrimary"
            android:animateLayoutChanges="true"
            android:timePickerMode="clock" />





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:weightSum="1">

            <Button
                android:id="@+id/activity_sleep_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="0.5"
                android:text="@string/sleep_mode_no"
                android:textColor="@color/colorNormal"
                android:textSize="14sp" />

            <Button
                android:id="@+id/activity_sleep_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/sleep_mode_yes"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/activity_sleep_linear_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/alarmInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="2"
                android:text="@string/sleep_mode_message"
                android:textColor="?attr/colorAccent"
                android:textSize="14sp" />

            <Button
                android:id="@+id/activity_sleep_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:text="@string/sleep_mode_cancel"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
 </ScrollView>