<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"

    xmlns:fab="http://schemas.android.com/tools">


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:layout_alignParentBottom="true"

                    android:layout_alignParentStart="true"
                    android:layout_gravity="center"
                    android:scaleType="fitXY"
                    app:srcCompat="@mipmap/ic_launcher" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:shadowColor="@color/textColorBlack"
                            android:textAllCaps="false"
                            android:textColor="@color/exomedia_default_controls_button_disabled"
                            android:textColorHighlight="?attr/colorAccent"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:visibility="visible"
                            fab:text="@string/now_playing" />

                        <TextView
                            android:id="@+id/radio_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:shadowColor="@color/textColorBlack"
                            android:textAllCaps="false"
                            android:textColor="@color/colorPrimaryDark"
                            android:textColorHighlight="?attr/colorAccent"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:visibility="visible" />


                        <TextView
                            android:id="@+id/radio_desc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:shadowColor="@color/textColorBlack"
                            android:textAllCaps="false"
                            android:textColor="@color/exomedia_default_controls_button_disabled"
                            android:textColorHighlight="?attr/colorAccent"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:visibility="gone" />

                        <TextView
                            android:id="@+id/current_play"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:shadowColor="@color/colorPrimary"
                            android:textAllCaps="false"
                            android:textColor="@color/exomedia_default_controls_button_disabled"
                            android:textColorHighlight="?attr/colorAccent"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tag"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:shadowColor="@color/textColorBlack"
                            android:textAllCaps="false"
                            android:textColor="@color/exomedia_default_controls_button_disabled"
                            android:textColorHighlight="?attr/colorAccent"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:visibility="gone" />

                        <TextView
                            android:id="@+id/hit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:shadowColor="@color/textColorBlack"
                            android:textAllCaps="false"
                            android:textColor="@color/exomedia_default_controls_button_disabled"
                            android:textColorHighlight="?attr/colorAccent"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:visibility="gone" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <com.github.clans.fab.FloatingActionButton
                            android:id="@+id/fab_category_favorite"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="15dp"
                            android:src="@drawable/ic_favorite_outline_white"
                            app:fab_colorNormal="@color/colorNormal"
                            fab:fab_label="@string/fab_favorite"
                            fab:fab_size="normal" />

                        <com.github.clans.fab.FloatingActionButton
                            android:id="@+id/fab_play"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="15dp"
                            android:src="@drawable/ic_play"
                            app:fab_colorNormal="@color/colorNormal"
                            fab:fab_label="@string/fab_favorite"
                            fab:fab_size="normal" />

                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>


    <LinearLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">


        <include
            android:id="@+id/main_bar"
            layout="@layout/play_bar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:visibility="gone"

            />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/admob_banner_unit_id" />

    </LinearLayout>

</RelativeLayout>

